src/n2-features/f3-learn/l1-practice/Practice.module.scss
.practice {
  position: relative;
  display: flex;
  justify-content: center;
  min-height: calc(100vh - 61px);

  &__container {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    box-sizing: border-box;
    width: 1000px;
    height: inherit;
    padding: 0 60px;
  }

  &__title {
    margin-top: 45px;
    text-align: center;
  }
}


.card {
  box-sizing: border-box;
  height: 340px;
  width: 100%;
  background-color: transparent;
  perspective: 3000px;

  &__inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: transform 1s;
    text-align: center;
    transform-style: preserve-3d;
  }

  &__front, &__back {
    position: absolute;
    overflow: hidden;
    width: 100%;
    height: 100%;
    padding: 0 10px;
    font-size: 18px;
    font-weight: 600;
    border-radius: 10px;
    border: 2px solid #B2B2B2;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;

  }

  &__front {
    color: dimgrey;
    background-color: #fffcb6;
  }

  &__back {
    transform: rotateX(180deg);
    color: dimgrey;
    background-color: #dddddd;
    &_bottom {

    }
  }

  &__next_btn {
    font-size: 18px;
    position: absolute;
    right: 15px;
    top: 15px;
    text-decoration: underline;
    color: cornflowerblue;
    border: none;
    background: none;
    padding-right: 20px;
    &:after {
      content: "";
      position: absolute;
      right: 0;
      top: 8px;
      border: 6px solid transparent;
      border-left: 6px solid cornflowerblue;
      &:hover {
        border-color: #4546a5;
      }
    }
    &:hover {
      cursor: pointer;
      color: #4546a5;
    }
  }
  &__text {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: calc(100% - 60px);
  }
}

